# llvm_course

./: .gitignore  CMakeLists.txt  model.py
app/: CMakeLists.txt  main.cpp
app/paint/: CMakeLists.txt
app/paint/include/: paint.h
app/slime/: CMakeLists.txt
capp/: CMakeLists.txt  README.md  app.c  app.cpp  app.ll
experiments/capp/: CMakeLists.txt  app.cpp
experiments/capp/fpsin/: CMakeLists.txt
experiments/capp/fpsin/include/: fpsin.h
experiments/capp/paint/include/: paint.h
experiments/sdl_lissaju/: CMakeLists.txt  app.c  app.ll  main.c
experiments/sdl_lissaju/sdl/: CMakeLists.txt  sim.c  sim.h
experiments/sdl_lissaju/sin/: CMakeLists.txt
experiments/sdl_lissaju/sin/include/: fpsin.h
experiments/sdl_lissaju/sin/src/: fpsin.cpp
ir_generator/: README.md  main.cpp
ir_generator/stupid/: main.cpp
ir_generator/stupid_dont_watch/: main.cpp
old/capp_old/paint/: CMakeLists.txt
old/capp_old/paint/src/: paint.cpp
old/sdl/: main.c  sim.h
old/test_trace/capp/fpsin/src/: fpsin.cpp
old/test_trace/sdl/: app.c  main.c  sim.h
old/test_trace/trace_stuff/: collect.py  pass.cpp  trace_logger.c
old/trace/: CMakeLists.txt  README.md  pass.cpp  stat.py
old/trace/statistics/: pass_log.txt
sdl/: README.md  app.c  app.ll  app_o1.ll  main.c  myapp  sim.c
trace/: README.md  inst_collector.cpp  logger.c  pass.cpp  stat.py
trace/statistics/: patterns_legend.txt  stat.py
